# alert-hygiene-auditor

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: settings.yaml
docker/: alertmanager.yml  docker-compose.yml  prometheus.yml
docker/rules/: noisy_alerts.yml
docs/: architecture-decisions.md  architecture.md
src/auditor/: __init__.py  config.py
src/auditor/analysis/: __init__.py  engine.py  evaluation.py  features.py  schemas.py
src/auditor/analysis/detectors/: __init__.py  chronic_noise.py  co_firing.py  isolation_forest.py  threshold_drift.py
src/auditor/dashboard/: __init__.py  app.py
src/auditor/db/: __init__.py  models.py  session.py
src/auditor/ingest/: __init__.py  alertmanager_client.py  normalizer.py  prometheus_client.py  runner.py
src/auditor/recommendations/: __init__.py  generator.py  schemas.py
src/auditor/recommendations/exporters/: __init__.py  json_exporter.py  markdown_exporter.py
tests/: __init__.py  test_chronic_noise_detector.py  test_co_firing_detector.py  test_feature_extractor.py  test_isolation_forest_detector.py  test_recommendation_generator.py  test_threshold_drift_detector.py
