[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alert-hygiene-auditor"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0",
    "psycopg2-binary",
    "httpx",
    "pydantic>=2.0",
    "pydantic-settings",
    "alembic",
    "pyyaml>=6.0",
    "streamlit>=1.35",
    "plotly>=5.22",
    "scikit-learn>=1.3",
    "numpy>=1.24",
    "pandas>=2.0",
    "joblib>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff",
    "black",
]

[tool.hatch.build.targets.wheel]
packages = ["src/auditor"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/auditor"]
branch = true

[tool.coverage.report]
show_missing = true
